--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
     font-family: 'Arial', sans-serif;
     margin: 20px;
+    background-color: #f5f5f5;
 }
 
-h1 {
+h1, h3 {
     text-align: center;
     color: #333;
 }
@@ -30,11 +31,14 @@ table {
     width: 90%;
     border-collapse: collapse;
     margin-bottom: 20px;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 th, td {
     border: 1px solid #ddd;
-    padding: 8px;
+    padding: 12px;
     text-align: left;
 }
 
@@ -49,4 +53,14 @@ h2 {
 
 p {
     color: #555;
+    margin-bottom: 10px;
+}
+
+#fileInputs {
+    display: flex;
+    flex-direction: column;
+}
+
+#comparisonTable {
+    margin-top: 20px;
 }
